<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <TextView
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OPTIONS"
        android:textColor="#2196F3"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <RadioGroup
        android:id="@+id/selectOperation"
        android:layout_width="320dp"
        android:layout_height="98dp"
        android:checkedButton="@id/plus"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.364">

        <RadioButton
            android:id="@+id/plus"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/minus"
            android:layout_width="86dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/subtract"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/multiply"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/operation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_operation"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.263" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="124dp"
        android:layout_height="79dp"
        android:layout_marginBottom="36dp"
        android:text="BACK"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="124dp"
        android:layout_height="79dp"
        android:layout_marginBottom="36dp"
        android:text="PLAY"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton" />

    <TextView
        android:id="@+id/selectMode"
        android:layout_width="186dp"
        android:layout_height="49dp"
        android:text="Select Mode"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526" />

    <RadioGroup
        android:id="@+id/gameMode"
        android:layout_width="365dp"
        android:layout_height="121dp"
        android:checkedButton="@id/timeTrial"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.652"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704">

        <RadioButton
            android:id="@+id/timeTrial"
            android:layout_width="216dp"
            android:layout_height="121dp"
            android:layout_weight="1"
            android:text="Time Trial"
            android:textSize="30sp" />

        <RadioButton
            android:id="@+id/infinite"
            android:layout_width="204dp"
            android:layout_height="121dp"
            android:layout_weight="1"
            android:text="Infinite"
            android:textSize="30sp" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>